--- a/client/package.json
+++ b/client/package.json
@@ -39,5 +39,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:3001"
+  "proxy": "https://whispering-taiga-96830.herokuapp.com/"
 }
