--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "engines": {
-    "node": "16.17.1",
+    "node": "18.x",
     "npm": "8.15.0"
   },
   "scripts": {
